--- a/app/static/css/homepage_redesign.css
+++ b/app/static/css/homepage_redesign.css
@@ -1,19 +1,23 @@
 /* TODO: refactor this: merge with knowitwallredux.css (after cleaning knowitwallredux.css) */
+
+/*darken homepage box images on hover */
+.homepage_box_episode:hover > .homepage_overlay {
+    position: absolute;
+    top: 0;
+    width:100%;
+    height:100%;
+    left: 0;
+    background: rgba(0, 0, 0, 0.6);
+    background: -webkit-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8));
+    background: -o-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8));
+    background: -moz-linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8));
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8));
+    display: block;
+}
 .homepage_hidden_info{
   display: none;
-
 }
-.homepage_box_episode:hover > .homepage_hidden_info{
-  /*-webkit-transition: all 500ms ease;
--moz-transition: all 500ms ease;
--ms-transition: all 500ms ease;
--o-transition: all 500ms ease;
-transition: all 500ms ease;*/
-/*-webkit-transition: all 5s ease;
--moz-transition: all 5s ease;
--ms-transition: all 5s ease;
--o-transition: all 5s ease;
-transition: all 5s ease;*/
+.homepage_overlay:hover > .homepage_hidden_info{
   display:inline;
 }
 /* homepage boxes: rows and column styling (to override bootstrap) */
