--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -370,6 +370,7 @@
         <div class="col-md-7 homepage_box_col">
            <!-- linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), -->
           <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
+            <div class="homepage_overlay">
             <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
               <p href="episodes/{{elem.url}}" class="box_episode_title ">
                 {{elem.topic_name | safe}}
@@ -382,6 +383,7 @@
             <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
           </div>
           </div>
+          </div>
         </div>
         {% endfor %}
       </div>
@@ -389,21 +391,22 @@
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[2:4] %}
-        <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
-           <!-- linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), -->
-           <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-             <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
-               <p href="episodes/{{elem.url}}" class="box_episode_title ">
-                 {{elem.topic_name | safe}}
+          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
+            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
+              <div class="homepage_overlay">
+               <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
+                 <p href="episodes/{{elem.url}}" class="box_episode_title ">
+                   {{elem.topic_name | safe}}
+                 </p>
+               </a>
+               <div class="homepage_hidden_info">
+               <p class="homepage_box_by-in">
+                 <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
                </p>
-             </a>
-             <div class="homepage_hidden_info">
-             <p class="homepage_box_by-in">
-               <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-             </p>
-             <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-           </div>
-           </div>
+               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
+              </div>
+            </div>
+          </div>
         </div>
         {% endfor %}
       </div>
@@ -414,17 +417,19 @@
         <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
            <!-- linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), -->
            <div style="background: url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-             <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
-               <p href="episodes/{{elem.url}}" class="box_episode_title">
-                 {{elem.topic_name | safe}}
-               </p>
-             </a>
-             <div class="homepage_hidden_info">
-             <p class="homepage_box_by-in">
-               <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-             </p>
-             <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-           </div>
+              <div class="homepage_overlay">
+                 <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
+                   <p href="episodes/{{elem.url}}" class="box_episode_title">
+                     {{elem.topic_name | safe}}
+                   </p>
+                 </a>
+                 <div class="homepage_hidden_info">
+                 <p class="homepage_box_by-in">
+                   <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
+                 </p>
+                 <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
+               </div>
+             </div>
            </div>
         </div>
         {% endfor %}
@@ -435,17 +440,19 @@
         <div class="col-md-7 homepage_box_col">
            <!-- linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), -->
           <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-            <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
-              <p href="episodes/{{elem.url}}" class="box_episode_title">
-                {{elem.topic_name | safe}}
+            <div class="homepage_overlay">
+              <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
+                <p href="episodes/{{elem.url}}" class="box_episode_title">
+                  {{elem.topic_name | safe}}
+                </p>
+              </a>
+              <div class="homepage_hidden_info">
+              <p class="homepage_box_by-in">
+                <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
               </p>
-            </a>
-            <div class="homepage_hidden_info">
-            <p class="homepage_box_by-in">
-              <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-            </p>
-            <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-          </div>
+              <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
+              </div>
+            </div>
           </div>
         </div>
         {% endfor %}
