archive and homepage chnages

--- a/app/static/css/archive_page.css
+++ b/app/static/css/archive_page.css
@@ -264,7 +264,11 @@ footer .footer-info{
  #button_images{
    background-color: rgba(255, 194, 28, 0.8);
  }
-
+.archive_hidden_anchor{
+  visibility:hidden;
+  position: relative;
+  bottom: 85px;
+}
 .scroll-top .btn {
   border-radius: 0px;
   opacity: 0.9;
