--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -264,9 +264,9 @@
             <a href="#about">About</a>
           </li>
 
-          <li class="page-scroll">
+          <!-- <li class="page-scroll">
             <a href="#episodes">episodes</a>
-          </li>
+          </li> -->
 
           <li class="page-scroll">
             <a href="#contribute">Get Involved</a>
@@ -349,11 +349,10 @@
   </header>
 
     <section id="episodes">
-<!-- START OF REDESIGN TEST -->
-
       <div class="row homepage_box_row">
         <div class="col-md-5 homepage_box_col">
           <div class="homepage_box_about">
+            <div class="about_hidden_anchor" id="about"></div>
             <div class="row">
               <h2>About</h2>
             </div>
@@ -472,9 +471,6 @@
 
         </div>
       </div>
-
-<!-- END OF REDESIGN TEST -->
-
 
       </div> <!-- end of class 'overflow' -->
 
