--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -424,7 +424,7 @@
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[2:4] %}
-          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
+          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
             <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
                <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
@@ -447,7 +447,7 @@
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[4:6] %}
-        <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
+        <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
            <!-- linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), -->
            <div style="background: url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
@@ -469,7 +469,31 @@
       </div>
 
       <div class="row homepage_box_row">
-        {% for elem in audiodocs[6:7] %}
+        {% for elem in audiodocs[6:8] %}
+        <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
+           <!-- linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), -->
+           <div style="background: url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
+              <div class="homepage_overlay">
+                 <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
+                   <p href="episodes/{{elem.url}}" class="box_episode_title">
+                     {{elem.topic_name | safe}}
+                   </p>
+                 </a>
+                 <div class="homepage_hidden_info">
+                 <p class="homepage_box_by-in">
+                   <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
+                 </p>
+                 <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
+               </div>
+             </div>
+           </div>
+        </div>
+        {% endfor %}
+      </div>
+
+
+      <div class="row homepage_box_row">
+        {% for elem in audiodocs[8:9] %}
         <div class="col-md-7 homepage_box_col">
            <!-- linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), -->
           <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
@@ -493,7 +517,7 @@
         <div class="col-md-5 homepage_box_col">
           <div class="homepage_box_more_episodes" style="background-color: #ffc21c">
             <div class="row" >
-              <h2 style="padding-top:160px; font-size:40px; font-weight:300;">All episodes</h2>
+              <h2 style="padding-top:160px; font-size:50px; font-weight:300;">All episodes</h2>
             </div>
             <!-- <div class="row homepage_About_description">
               <p>You can view more of our episodes here</p>
