--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -468,10 +468,9 @@
         {% endfor %}
       </div>
 
-      <div class="row homepage_box_row">
+      <!-- <div class="row homepage_box_row">
         {% for elem in audiodocs[6:8] %}
         <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
-           <!-- linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)), -->
            <div style="background: url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
                  <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
@@ -489,7 +488,7 @@
            </div>
         </div>
         {% endfor %}
-      </div>
+      </div> -->
 
 
       <div class="row homepage_box_row">
