--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -367,60 +367,7 @@
   </section>
 
     <section id="episodes">
-      <!-- <div class="row homepage_box_row">
-        {% for elem in audiodocs[1:2] %}
-        <div class="col-md-5 homepage_box_col">
-
-          <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-            <div class="homepage_overlay">
-            <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
-              <p href="episodes/{{elem.url}}" class="box_episode_title ">
-                {{elem.topic_name | safe}}
-              </p>
-            </a>
-            <div class="homepage_hidden_info">
-            <p class="homepage_box_by-in">
-              <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-            </p>
-            <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-          </div>
-          </div>
-          </div>
-        </div>
-        {% endfor %}
-
-        <div class="col-md-7 homepage_box_col">
-          <div class="homepage_box_about">
-            <div class="row" style="padding-top: 65px;">
-              <div class="col-md-4">
-                <div id="about-left" style="padding-right: 0px;">
-                <h2>about</h2>
-                </div>
-              </div>
-              <div class="col-md-8" style="padding-left: 30px; margin-left: 100px;">
-                <div class="vertical-line" style="width: 600px;">
-                <p class = 'justify'>Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
-                <br>
-                <p class = 'justify'>Right now you can read and listen to our episodes, but soon you'll be able to watch them too. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
-                </div>
-              </div>
-            </div>
-            <div class="about_hidden_anchor" id="about"></div>
-            <div class="row">
-              <h2>About</h2>
-            </div>
-            <div class="row homepage_About_description">
-              <p>Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
-              <p>
-                Right now you can read and listen to our episodes, but soon you'll be able to watch them too. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!
-              </p>
-            </div>
-
-          </div>
-
-        </div>
-      </div> -->
-
+    <div class="episodes_container">
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[2:4] %}
@@ -467,28 +414,6 @@
         {% endfor %}
       </div>
 
-      <!-- <div class="row homepage_box_row">
-        {% for elem in audiodocs[6:8] %}
-        <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
-           <div style="background: url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-                 <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
-                   <p href="episodes/{{elem.url}}" class="box_episode_title">
-                     {{elem.topic_name | safe}}
-                   </p>
-                 </a>
-                 <div class="homepage_hidden_info">
-                 <p class="homepage_box_by-in">
-                   <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-                 </p>
-                 <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-               </div>
-             </div>
-           </div>
-        </div>
-        {% endfor %}
-      </div> -->
-
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[8:9] %}
@@ -513,18 +438,17 @@
         {% endfor %}
 
         <div class="col-md-5 homepage_box_col">
-          <div class="homepage_box_more_episodes" style="background-color: #ffc21c">
+          <div class="homepage_box_more_episodes">
             <div class="row" >
-              <h2 style="padding-top:160px; font-size:50px; font-weight:300;">All episodes</h2>
+              <a class="more_episodes_redirect" href="/all_episodes">
+                <h2 style="">All episodes</h2>
+              </a>
             </div>
-            <!-- <div class="row homepage_About_description">
-              <p>You can view more of our episodes here</p>
-            </div> -->
           </div>
 
         </div>
       </div>
-
+    </div>
       </div> <!-- end of class 'overflow' -->
 
     </section>
