--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -243,7 +243,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="/newsletter" id="newsletter">Newsletter</a>
+            <a href="/all_episodes">All Episodes</a>
           </li>
           <li>
             <a href="https://twitter.com/KnowitWall" target="_blank" class=""><i class="fa fa-fw fa-twitter"></i></a>
