--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -374,103 +374,74 @@
           <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
             <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
-               <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
-                 <p class="box_episode_title {{loop.cycle('box_episode_title_bigger', '')}}">
+                <!-- homepage_hidden_info -->
+               <a a href="episodes/{{elem.url}}" target="_blank" class="">
+                 <p class="box_episode_title">
                    {{elem.topic_name | safe}}
                  </p>
                </a>
-               <div class="homepage_hidden_info">
-               <p class="homepage_box_by-in {{loop.cycle('homepage_box_by-in_bigger', '')}}">
+               <p class="homepage_box_by-in">
                  <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
                </p>
-               <p class="homepage_box_abstract {{loop.cycle('homepage_box_abstract_bigger', '')}}">{{elem.topic_description | safe}}</p>
+             <div class="homepage_hidden_info">
+               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
               </div>
             </div>
           </div>
         </div>
         {% endfor %}
       </div>
-
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[3:5] %}
-        <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
-           <div style="background: url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
+          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
+            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
-                 <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
-                   <p class="box_episode_title {{loop.cycle('', 'box_episode_title_bigger')}}">
-                     {{elem.topic_name | safe}}
-                   </p>
-                 </a>
-                 <div class="homepage_hidden_info">
-                 <p class="homepage_box_by-in {{loop.cycle('', 'homepage_box_by-in_bigger')}}">
-                   <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
+                <!-- homepage_hidden_info -->
+               <a a href="episodes/{{elem.url}}" target="_blank" class="">
+                 <p class="box_episode_title">
+                   {{elem.topic_name | safe}}
                  </p>
-                 <p class="homepage_box_abstract {{loop.cycle('','homepage_box_abstract_bigger')}}">{{elem.topic_description | safe}}</p>
-               </div>
-             </div>
-           </div>
-        </div>
-        {% endfor %}
-      </div>
-
-
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[5:6] %}
-        <div class="col-md-7 homepage_box_col">
-          <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-            <div class="homepage_overlay">
-              <a a href="episodes/{{elem.url}}" target="_blank" class="homepage_hidden_info">
-                <p class="box_episode_title box_episode_title_bigger">
-                  {{elem.topic_name | safe}}
-                </p>
-              </a>
-              <div class="homepage_hidden_info">
-              <p class="homepage_box_by-in homepage_box_by-in_bigger">
-                <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-              </p>
-              <p class="homepage_box_abstract homepage_box_abstract_bigger">{{elem.topic_description | safe}}</p>
+               </a>
+               <p class="homepage_box_by-in">
+                 <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
+               </p>
+             <div class="homepage_hidden_info">
+               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
               </div>
             </div>
           </div>
         </div>
         {% endfor %}
+      </div>
 
-        <!-- 'more episodes': bright background version -->
-        <!-- <div class="col-md-5 homepage_box_col">
-          <div class="homepage_box_more_episodes">
-            <div class="row">
-              <a class="more_episodes_redirect" href="/all_episodes">
-                <h2>All episodes</h2>
-              </a>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- 'more episodes': darkenen background on hover -->
-        <div class="col-md-5 homepage_box_col">
-          <div style="background:url('/static/Images/all_episodes_centered.jpg'); background-size:cover;" class='homepage_box_episode'>
-            <div class="homepage_overlay">
-              <a a href="/all_episodes" target="_blank" class="homepage_hidden_info">
-
-                <!-- <p class="box_episode_title box_episode_title_bigger" style="font-size:32px; margin-top: 110px">
-                  All Episodes
-                </p> -->
-                <h2 style="font-size:70px; color: white; font-weight:300; margin-top: 150px;">All episodes</h2>
-              </a>
-
-              <!-- <div class="homepage_hidden_info">
-              <p class="homepage_box_abstract" style="font-size: 17px; line-height:35px;">You can check out all our episodes ranging from the <a href="/all_episodes" class="highlight">Arts</a> to the <a class="highlight" href="/all_episodes" >Sciences</a></p>
-              <p class="homepage_box_by-in homepage_box_by-in_bigger"  style="margin-top:10px;">
-                You can check out all our episodes ranging from the <a href="/all_episodes" class="highlight">Arts</a> to the <a class="highlight" href="/all_episodes" >Sciences</a>
-              </p>
-              </div> -->
-
+      <div class="row homepage_box_row">
+        {% for elem in audiodocs[5:7] %}
+          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
+            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
+              <div class="homepage_overlay">
+                <!-- homepage_hidden_info -->
+               <a a href="episodes/{{elem.url}}" target="_blank" class="">
+                 <p class="box_episode_title">
+                   {{elem.topic_name | safe}}
+                 </p>
+               </a>
+               <p class="homepage_box_by-in">
+                 <i>by</i> <a href="episodes/{{elem.url}}#author" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
+               </p>
+             <div class="homepage_hidden_info">
+               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
+              </div>
             </div>
           </div>
         </div>
-
+        {% endfor %}
       </div>
+
+
+
+
+
     </div>
       </div> <!-- end of class 'overflow' -->
 
