--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -264,10 +264,6 @@
             <a href="#about">About</a>
           </li>
 
-          <!-- <li class="page-scroll">
-            <a href="#episodes">episodes</a>
-          </li> -->
-
           <li class="page-scroll">
             <a href="#contribute">Get Involved</a>
           </li>
@@ -278,7 +274,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="/all_episodes">All Episodes</a>
+            <a href="/all_episodes" id="all_episodes">All Episodes</a>
           </li>
           <li>
             <a href="https://twitter.com/KnowitWall" target="_blank" class=""><i class="fa fa-fw fa-twitter"></i></a>
