padding changes on archive

--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -312,7 +312,7 @@
           {% endfor %}
         </div>
       </div> -->
-      <div class="col-md-6 ">
+      <div class="col-md-6 " style="padding-right:0px">
         <div class="col-md-12 ">
           <h2 class="archive_category archive_category_image_mobile">
             All Episodes
@@ -341,7 +341,7 @@
       </div>
 
 
-      <div class="col-md-6">
+      <div class="col-md-6" style="padding-left:0px;">
         <div class="col-md-12">
           <h2 class="archive_category archive_category_image_mobile">
             All Episodes
